# QtOpenAI

./: CMakeLists.txt  README.md
examples/chat/: CMakeLists.txt  main.cpp
src/: qtopenai.cpp  qtopenai.h  qtopenai_global.h
src/models/: chatcompletion.cpp  chatcompletion.h  embedding.cpp  embedding.h  imagegeneration.cpp  imagegeneration.h
src/network/: networkmanager.cpp  networkmanager.h
